<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Good Afternoon!"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_user"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

    <TextView
        android:id="@+id/tv_label_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/label_articles"/>

    <TextView
        android:id="@+id/tv_label_article_see_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:text="@string/label_see_more"/>

    <View
        android:id="@+id/v_div_articles"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_article"
        android:layout_marginTop="4dp"
        android:background="@color/material_dynamic_neutral90"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_articles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/v_div_articles"/>

    <TextView
        android:id="@+id/tv_label_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_articles"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/label_blog"/>

    <TextView
        android:id="@+id/tv_label_blog_see_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_articles"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:text="@string/label_see_more"/>

    <View
        android:id="@+id/v_div_blog"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_blog"
        android:layout_marginTop="4dp"
        android:background="@color/material_dynamic_neutral90"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_blogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/v_div_blog"/>

    <TextView
        android:id="@+id/tv_label_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_blogs"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/label_report"/>

    <TextView
        android:id="@+id/tv_label_report_see_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rv_blogs"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:text="@string/label_see_more"/>

    <View
        android:id="@+id/v_div_report"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_report"
        android:layout_marginTop="4dp"
        android:background="@color/material_dynamic_neutral90"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/v_div_report"/>

</androidx.constraintlayout.widget.ConstraintLayout>